# mmit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml
docker/: Dockerfile  build_image.sh  requirements.txt  start_container.sh
docs/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.md
docs/source/_static/css/: baseline.css
docs/source/api/: create_decoder.md  create_encoder.md  create_model.md
docs/source/guide/: examples.md  install.md  quickstart.md
docs/source/modules/decoders/: deeplabv3+.md  deeplabv3.md  fpn.md  linknet.md  pan.md  pspnet.md  unet++.md  unet.md
docs/source/modules/encoders/: timm.md
mmit/: __init__.py
mmit/base/: __init__.py  activations.py  extra.py  mismatch.py  modules.py  norms.py  upsamplers.py
mmit/decoders/: __init__.py  basedecoder.py  utils.py
mmit/decoders/deeplabv3/: aspp.py  model.py  parts.py
mmit/decoders/deeplabv3plus/: aspp.py  model.py  parts.py
mmit/decoders/fpn/: model.py  parts.py
mmit/decoders/linknet/: model.py  parts.py
mmit/decoders/pan/: fpa.py  gau.py  model.py
mmit/decoders/pspnet/: model.py  parts.py
mmit/decoders/unet/: model.py  parts.py
mmit/decoders/unetplusplus/: model.py
mmit/decoders/utils/: __init__.py  resize.py  resizing_warning.py
mmit/encoders/: __init__.py  basencoder.py
mmit/encoders/timm/: model.py  timm.py
mmit/factory/: __init__.py  components.py  factory.py  registry.py
mmit/heads/: __init__.py  classification.py  segmentation.py
mmit/models/: __init__.py  model.py
tests/: conftest.py  cursed_net.py  test_base_components.py  test_decoders.py  test_encoders_decoders.py  test_end2end.py
tests/demo_blocks/: __init__.py  classic_decoder.py  classic_encoder.py
tests/demo_encoders/: __init__.py  classic_net.py
visionexpo/base/: upsamplers.py
visionexpo/decoders/: __init__.py  basedecoder.py
visionexpo/decoders/unet/: model.py  parts.py
visionexpo/decoders/unetplusplus/: model.py
visionexpo/encoders/: __init__.py  basencoder.py  timm.py
visionexpo/encoders/timm/: timm.py
