[build-system]
requires      = ["setuptools>=62.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mmit"
dynamic = ["version"]
description = "A Python package for computer vision experiments and research."
readme = "README.md"
authors = [{ name = "Andrea Boscolo Camiletto", email = "abcamiletto@gmail.com" }]
dependencies = [
    "timm>=0.9.0",
    "torch>=1.9"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest", "pytest-cov", "pytest-lazy-fixture", "pre-commit"]
docs = ["sphinx",
        "sphinx-autobuild",
        "sphinx-rtd-theme",
        "sphinxcontrib.spelling",
        "sphinx-autodoc-typehints",
        "sphinx_copybutton"
]

[tool.setuptools_scm]
write_to = "mmit/_version.py"

[tool.setuptools.packages.find]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
line-length = 120
