[build-system]
requires      = ["setuptools>=62.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mmit"
description = "A Python package for computer vision experiments and research."
readme = "README.md"
authors = [{ name = "Andrea Boscolo Camiletto", email = "abcamiletto@gmail.com" }]
dependencies = [
    "timm>=0.9.0",
    "torch>=1.10"
]
requires-python = ">=3.8"
version = "0.0.4"

[project.urls]
Homepage = "https://github.com/abcamiletto/mmit"
Repository = "https://github.com/abcamiletto/mmit"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest", "pytest-cov", "pytest-lazy-fixture", "pre-commit"]
docs = ["sphinx==7.0.1",
        "sphinx-autobuild",
        "sphinx-rtd-theme",
        "sphinxcontrib.spelling",
        "sphinx-autodoc-typehints",
        "sphinx_copybutton",
        "sphinx-autoapi",
        "myst-parser"
]

[tool.setuptools.packages.find]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"] # exclude imports from __init__.py
